<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.scijava</groupId>
		<artifactId>pom-scijava</artifactId>
		<version>43.0.0</version>
	</parent>
	<repositories>
		<!-- NB: for project parent -->
		<repository>
			<id>imagej.public</id>
			<url>https://maven.imagej.net/content/groups/public</url>
		</repository>
	</repositories>

	<artifactId>confocal-lens</artifactId>
	<groupId>org.janelia.saalfeldlab</groupId>
	<version>0.0.1-SNAPSHOT</version>

	<description>Calculate lens-distortion from confocal stacks</description>

	<properties>
		<package-name>org.janelia.saalfedlab.confocallens</package-name>
		<license.licenseName>gpl_v3</license.licenseName>
		<license.copyrightOwners>Stephan Saalfeld and Takashi Kawasw.</license.copyrightOwners>

		<!-- Java version -->
		<maven.compiler.release>17</maven.compiler.release>

		<!-- NB: Deploy releases to the SciJava Maven repository. -->
		<releaseProfiles>sign,deploy-to-scijava</releaseProfiles>

		<TrakEM2.version>2.0.1</TrakEM2.version>

		<enforcer.skip>true</enforcer.skip>
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
		</dependency>
		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
		</dependency>
		<dependency>
			<groupId>commons-collections</groupId>
			<artifactId>commons-collections</artifactId>
		</dependency>
		<dependency>
			<groupId>sc.fiji</groupId>
			<artifactId>TrakEM2_</artifactId>
		</dependency>
		<dependency>
			<groupId>net.imglib2</groupId>
			<artifactId>imglib2-ij</artifactId>
		</dependency>
		<dependency>
			<groupId>sc.fiji</groupId>
			<artifactId>LSM_Reader</artifactId>
		</dependency>
		<dependency>
			<groupId>ome</groupId>
			<artifactId>bio-formats_plugins</artifactId>
		</dependency>
		<dependency>
			<groupId>ome</groupId>
			<artifactId>formats-gpl</artifactId>
		</dependency>
		<dependency>
			<groupId>ome</groupId>
			<artifactId>formats-bsd</artifactId>
		</dependency>
		<dependency>
			<groupId>info.picocli</groupId>
			<artifactId>picocli</artifactId>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>
						-Djava.awt.headless=true
						--add-opens=java.desktop/javax.swing=ALL-UNNAMED
						--add-opens=java.base/java.lang=ALL-UNNAMED
						--add-opens=java.base/java.io=ALL-UNNAMED
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<commandlineArgs>
						-Djava.awt.headless=true
						--add-opens=java.desktop/javax.swing=ALL-UNNAMED
						--add-opens=java.base/java.lang=ALL-UNNAMED
					</commandlineArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>